--- a/src/pages/p11.astro
+++ b/src/pages/p11.astro
@@ -34,97 +34,65 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  <text class="text-lg"><p align="justify">  
  
  <b>Summary.</b>
+
+
+                <br>
+                <p align="justify">
+
  Ecosystems and humans are exposed to an unknown number of chemicals. Many of them, such as synthetic pesticides, are in constant use due to increasing agricultural production.
 PPPs are a very diverse group of chemicals with different physicochemical and biochemical properties and different routes of exposure. Humans are exposed through food, ambient air or occupational activities, but the sum and mixtures of exposures to pesticides are unknown. Therefore, the fate of pesticides or plant protection products (PPPs) in the environment and the extent of their exposure to humans and ecosystems are not yet clear, and comprehensive exposure assessments are rare.
 However, it is important to know the actual exposure of the population because many pesticides are associated with adverse health effects. Some pesticides are endocrine disrupting chemicals (EDCs), which alter hormonal and homeostatic systems. Environmental exposures to EDCs during sensitive periods of life, such as fetal development, childhood or adolescence, result in adverse health effects. Developmental exposures to EDCs have been widely linked to health impairments such as reduced fertility, metabolic disorders, and cancer. Other pesticides, such as carbamates and organophosphates, inactivate the enzyme acteylcholinesterase (AChE) and alter the nervous system, leading to neurodegenerative diseases like Parkinson's disease. Pesticide exposure may also be one of several risk factors associated with ADHD, multiple sclerosis, and Alzheimer's disease.
 Today's national and international pesticide risk assessments focus only on the specific active ingredient and do not consider product formulations and mixtures of pesticides. As a result, regulatory measures are lagging behind in protecting society. International bodies such as the World Health Organization (WHO) are increasingly recognizing the need to develop new (NAMs) to improve the identification and assessment of chemicals, especially those with endocrine disrupting properties. However, the potential toxic effects of chemicals depend not only on their concentration, but also on their mixture and the lifetime exposure window. Therefore, it is important to assess the potential exposure to pesticide mixtures to ensure human and environmental health, to develop specific mitigation measures, and to redefine the regulatory process for pesticide registration and use.
 The specific exposure to pesticide mixtures varies considerably between geographical areas and over time. For Switzerland, the extent of potential pesticide exposure of the non-occupational population is still unknown.
-
+ </p>
+                <br>
+                <p align="justify">
 
 Exposure to PPPs is difficult to assess because the routes of exposure and the time and season of exposure vary widely among the population and across geographic areas. Furthermore, the assessment of PPP exposure is difficult because some PPPs are persistent or degrade rapidly to sometimes unknown metabolites.
-
+ </p>
+                <br>
+                <p align="justify">
 In this project, we aim to assess the exposure of children to pesticides in Switzerland , including four different agricultural regions of Switzerland:
 - Valais (VS)
 - Three Lakes Region (TLR)
 - Zürcher Weinland/Zürcher Vinland (ZV)
 - Grisons (GR).
-
+  </p>
+                <br>
+                <p align="justify">
 The results will be used to identify and rank novel and unknown PPP exposure mixtures, including future in vitro testing for endocrine activity, oxidative stress and AChE interference.
-
-Aims of the Project
+ </p>
+                <br>
+                <p align="justify">
+<b>Aims of the Project</b>
 Globally, this comprehensive project aims to develop an integrative and open-source methodology to improve the identification and assessment of potential PPP exposure in different agricultural regions, thereby improving public health and supporting a shift in EU chemical regulations towards a more toxic-free environment.
-
+ </p>
+                <br>
+                <p align="justify">
 
 <b>Methods</b>
 Within the four Swiss study areas, environmental and non-invasive bio-samples will be collected. We sample again grass samples within the four different study areas and dust samples from participating households. Additionally hair samples from children of the participating households will be collected. The samples are then analyzed for more than 300 pesticide residues and metabolites.
-
+ </p>
+                <br>
+                <p align="justify">
 More about the project: https://www.pestizidmonitoring.ch/ & https://carolinelinhart.ch/
- 
+  </p>
+                <br>
+                <p align="justify">
 <b>Status of the Project and Project Plan</b>
 Nov 2023: Submission to the Ehtics Committee
 Dec & Jan 2023: Notification of local communities invited to participate
 Feb 2024: Start of information campaign and recruitment process
 March-April 2024: Recruitment phase
 April 2024: Start of survey & sample collection.
-
+ </p>
+                <br>
+                <p align="justify">
 <b>Cooperations and Study Team</b>
 Project ongoing in cooperation with the Department of Biology, Laboratory of Soil Biodiversity, University of Neuchâtel.
+ </p>
+           
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- We are currently facing a global health and environmental challenge due to the increasing presence of chemicals interfering with 
- the endocrine system in our environment. Endocrine Disrupting Chemicals (EDCs) are natural or synthetic compounds that alter the 
- hormonal and homeostatic systems, resulting in adverse health effects through environmental or inappropriate developmental exposures. 
- Developmental exposure to EDCs has been widely associated with health disorders such as infertility, metabolic diseases, and cancer. </p>
-
- <p align="justify">  
- <br>
- EDCs are difficult to identify and evaluate because of their persistence and their complex mechanisms of action. From more than 140.000 
- compounds authorized for its commercial use in Europe, only 17 has been identified as EDCs by Swiss and European regulatory agencies. 
- Chemical evaluation and screening is currently slow, costly and heavily based on in vivo-based evidence. Chemicals are asessed one at a 
- time, making the evaluation of EDC-activity of 140.000 compounds untenable. As a result, regulatory measures are lagging behind in 
- protecting society. International bodies such as the World Health Organization (WHO) increasingly acknowledge the urge to find new 
- alternative methodologies (NAMs) to improve the identification and evaluation of EDCs. </p>
-
- <p align="justify">  
- <br>
-In this project, <u>I aim to generate an integrative and multidisciplinary New Alternative Methodology (NAM) based on Artificial Intelligence (AI) 
-to identify and rank novel and unknown EDCs under Swiss and European regulations  </u>. First, I will (<b>A</b>) generate an in silico exploratory 
-tool to visualize the physicochemical, toxicological, ecotoxicological, and regulatory properties of 140.000 chemicals relevant in the 
-Swiss and European regulatory context. This exploratory tool will be based on TMAP, an AI-based algorithm of dimensionality reduction, 
-allowing the organization and clustering of chemicals based on their structural similarity and properties. A database containing chemical 
-properties will be generated using information from curated repositories. Secondly, I will (<b>B</b>) implement a machine learning approach to 
-identify and rank EDCs of concern. Unsupervised and semisupervised machine learning algorithms (i.e., random forest, deep learning) will 
-be trained using a subset of known EDCs and applied to identify unknown chemicals. Finally, to improve the transparency of the model, the 
-SHAP game theory algorithm will be used to identify chemical properties that contribute the most to the classification (e.g., estrogenic, 
-thyroid). </p>
-
-<p align="justify"> 
-<br>
-Globally, this innovative project aims at developing an integrative and open-source methodology to improve the identification and evaluation 
-of potential EDCs, thereby improving animal welfare and public health and promoting a shift in EU chemical regulations towards a toxic-free 
-environment. This project is particularly timely as the European Commission announced its intention to include Endocrine Disruption as a new 
-hazard class to the REACH  European Chemical legislation in 2023. Finally, my innovative methodology can be applied to identify chemical 
-hazards from alternative toxicological classes.  </p>
-<p align="justify"> 
-<br>
-Project ongoing at the Department of Environmental Science at the University of Lausanne (UNIL), Switzerland.</p>
-
- 
- 
- 
  </p> </text>
  </div>
 
