--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,26 +27,30 @@ const last_posts = posts.slice(0, 3);
           <div class="text-2xl py-2 font-bold">Research Fellow (Lausanne University) & Independent Consultant </div>
 
 
-          <div class="py-2"><text class="text-lg"> <p align="justify">
-              I am multidisciplinary researcher with an expertise in biology, toxicology, 
+          <div class="py-2"> <p align="justify">
+      
+             I am multidisciplinary researcher with an expertise in biology, toxicology, 
               environmental and computational sciences.
-
+              
+                <br>
+               
               As a researcher my focus lies in creating computational tools allowing to 
               advance scientific knowledge to improve public health and environmental 
               policies. I strive to develop a comprehensive understanding of the risks 
               associated with chemical exposures and gain an understanding on the biological 
               process involved in the control of metabolism.            
-            
+           
+                <br>
+                
               As an independent consultant, I offer my expertise in biostatistics, 
               bioinformatics, and advanced statistics to scientists and industries. 
               My skill set encompasses a spectrum of offerings, ranging from meticulous 
               data analysis, especially in omics data, to intricate statistical modeling, 
               as well as the creation of insightful data visualizations and their subsequent 
               interpretation.
+          
 
-
-
-              </p> </text> </div>
+              </p> </div>
 
            <div class="py-4">
            <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
