--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,12 +27,12 @@ const last_posts = posts.slice(0, 3);
           <div class="text-2xl py-2 font-bold">Research Fellow (Lausanne University) & Independent Consultant </div>
 
 
-          <div class="py-2"> <p align="justify">
+          <div class="py-2"><text class="text-lg"> <p align="justify">
       
              I am multidisciplinary researcher with an expertise in biology, toxicology, 
               environmental and computational sciences.
               
-                <br>
+                <br><br><br><br>
                
               As a researcher my focus lies in creating computational tools allowing to 
               advance scientific knowledge to improve public health and environmental 
@@ -40,7 +40,7 @@ const last_posts = posts.slice(0, 3);
               associated with chemical exposures and gain an understanding on the biological 
               process involved in the control of metabolism.            
            
-                <br>
+                <br><br><br><br>
                 
               As an independent consultant, I offer my expertise in biostatistics, 
               bioinformatics, and advanced statistics to scientists and industries. 
@@ -50,7 +50,7 @@ const last_posts = posts.slice(0, 3);
               interpretation.
           
 
-              </p> </div>
+              </p> </text> </div>
 
            <div class="py-4">
            <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
