--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -88,7 +88,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  
  <div class="time-line-container mb-10">
       <TimeLineElement
-      title="Bioinformatics & Environmental Science Consultant"
+      title="Bioinformatics & Environmental Sciences Consultant"
     />
 
    <TimeLineElement
@@ -229,7 +229,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                    <li><a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a> </li>
                    <li><a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a></li>
                    <li><a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a></li>
-                   <li><a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a></li
+                   <li><a href="https://www.frontiersin.org/journals/psychiatry" target="_blank">Reviewer for Frontiers in Psychiatry</a></li>
                    <li><a href="https://www.frontiersin.org/journals/behavioral-neuroscience" target="_blank">Reviewer for Frontiers in Behavioral Neuroscience</a></li>
           </ul>
 
