--- a/src/pages/p11.astro
+++ b/src/pages/p11.astro
@@ -75,7 +75,7 @@ Within the four Swiss study areas, environmental and non-invasive bio-samples wi
  </p>
                 <br>
                 <p align="justify">
-More about the project: https://www.pestizidmonitoring.ch/ & https://carolinelinhart.ch/
+More about the project: <b>https://www.pestizidmonitoring.ch/</b> & <b>https://carolinelinhart.ch/</b>
   </p>
                 <br>
                 <p align="justify">
