--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -18,7 +18,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  <div>
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
         </div>
-        
+        <HorizontalCard
+          title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
+          img="/p11.png"
+          desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
+          id="p11" 
+          url="/p11/"
+        />
+
+
         <HorizontalCard
           title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
           img="/Tmap.png"
