--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -38,12 +38,21 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
     <nav>
-      <a href="#section1">1</a> 
-      <a href="#section2">2</a> 
-      <a href="#section3">3</a>
+      <a href="#section1">Profile</a> 
+      <a href="#section2">Skills</a> 
+      <a href="#section3">Employment History</a>
+      <a href="#section4">Education</a>
+      <a href="#section5">Teaching Experience</a>
+      <a href="#section6">Awards, Grants and Fellowships</a>
+      <a href="#section7">Continuous Education</a>
+      <a href="#section8">Participation in conferences</a>
+      <a href="#section9">Peer-reviewing</a>
+      <a href="#section10">Active membership</a>
+      <a href="#section11">Language skills</a>
+      <a href="#section12">Certifications</a>
     </nav>
 
-    <section id="section1">1</section>
+
     
 
 
@@ -51,7 +60,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
 
-
+   <section id="section1"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Profile</div></div>
 
   <div class="mb-5 text-justify">
@@ -63,6 +72,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   various exposures to humans and the environment.
   </div>
 
+      <section id="section2"></section>
   <div class="mb-10"><div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
 
     <ul class="list-disc md:columns-2 columns-1 mx-6">
@@ -117,8 +127,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </ul>
     </div>
 
+        <section id="section3"></section>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Employment history </div>
+    <div class="text-3xl w-full font-bold">Employment History </div>
   </div>
  
  
@@ -150,6 +161,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
   </div>
 
+      <section id="section4"></section>
   <div class="mb-5">
     <div class="text-3xl w-full font-bold">Education</div>
   </div>
@@ -170,10 +182,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
 
-  <section id="section2" class="fifty">2</section>
-  <section id="section3">3</section>
 
-  
+
+      <section id="section5"></section>
    <div class="mb-5">
     <div class="text-3xl w-full font-bold">Teaching experience</div>
   </div>
@@ -205,6 +216,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
   </div>
 
+      <section id="section6"></section>
          <div class="mb-5">
     <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships</div>
   </div>
@@ -227,6 +239,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <TimeLineElement title="Bachelor’s scholarships"  subtitle="2008-2013 - Ministry of Education, Culture and Sports (Spain)" />
   </div>
 
+      <section id="section7"></section>
      <div class="mb-5">
     <div class="text-3xl w-full font-bold">Continuous Education</div>  </div> 
   <ul class="list-disc mx-6 mb-10 grid gap-2"> 
@@ -248,6 +261,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
   </ul>
   
+      <section id="section8"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in conferences</div></div>
       <div class="time-line-container grid gap-4 mb-10">
              <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
@@ -263,7 +277,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
              <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2016 -  Oral communication - Corte, Corsica, France" />
       </div>
 
-
+          <section id="section9"></section>
    <div class="mb-5"><div class="text-3xl w-full font-bold">Peer-reviewing</div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                    <li><a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a> </li>
@@ -273,7 +287,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                    <li><a href="https://www.frontiersin.org/journals/behavioral-neuroscience" target="_blank">Reviewer for Frontiers in Behavioral Neuroscience</a></li>
           </ul>
 
-
+              <section id="section10"></section>
      <div class="mb-5"> <div class="text-3xl w-full font-bold">Active membership</div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a href="https://www.swisstox.ch/" target="_blank">2023-Today: Member of the Swiss Society of Toxicology </a></li>
@@ -285,7 +299,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
           </ul>
 
 
-
+              <section id="section11"></section>
      <div class="mb-5"><div class="text-3xl w-full font-bold">Language skills</div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a target="_blank">Spanish: Native</a></li>
@@ -293,7 +307,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                     <li><a target="_blank">French: C2</a></li> 
           </ul>
 
-
+              <section id="section12"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Certifications</div> </div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a href="https://felasa.eu/" target="_blank"> FELASA certificate</a></li>
