--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -36,21 +36,19 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
 
-<b>
     <nav>
-      <a href="#section1"><b>Profile</b></a>
-      <a> - </a> 
-      <a href="#section2"><b>Skills</b></a> 
-      <a href="#section3"><b>Employment History</b></a> 
-      <a href="#section4"><b>Education</b></a> 
-      <a href="#section5"><b>Teaching Experience</b></a> 
-      <a href="#section6"><b>Awards, Grants and Fellowships</b></a> 
-      <a href="#section7"><b>Continuous Education</b></a> 
-      <a href="#section8"><b>Participation in conferences</b></a> 
-      <a href="#section9"><b>Peer-reviewing</b></a> 
-      <a href="#section10"><b>Active membership</b></a> 
-      <a href="#section11"><b>Language skills</b></a> 
-      <a href="#section12"><b>Certifications</b></a> 
+      <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a> - </a> 
+      <a href="#section2"><b>Skills</b></a>    <a> - </a> 
+      <a href="#section3"><b>Employment History</b></a>    <a> - </a> 
+      <a href="#section4"><b>Education</b></a>    <a> - </a> 
+      <a href="#section5"><b>Teaching Experience</b></a>    <a> - </a> 
+      <a href="#section6"><b>Awards, Grants and Fellowships</b></a>    <a> - </a> 
+      <a href="#section7"><b>Continuous Education</b></a>    <a> - </a> 
+      <a href="#section8"><b>Participation in conferences</b></a>    <a> - </a> 
+      <a href="#section9"><b>Peer-reviewing</b></a>    <a> - </a> 
+      <a href="#section10"><b>Active membership</b></a>    <a> - </a> 
+      <a href="#section11"><b>Language skills</b></a>    <a> - </a> 
+      <a href="#section12"><b>Certifications</b></a>    
     </nav>
 
 
