--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -44,14 +44,15 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <a href="#section5"><b>Teaching Experience</b></a>    <a> - </a> 
       <a href="#section6"><b>Awards, Grants and Fellowships</b></a>    <a> - </a> 
       <a href="#section7"><b>Continuous Education</b></a>    <a> - </a> 
-      <a href="#section8"><b>Participation in conferences</b></a>    <a> - </a> 
+      <a href="#section8"><b>Participation in Conferences</b></a>    <a> - </a> 
       <a href="#section9"><b>Peer-reviewing</b></a>    <a> - </a> 
       <a href="#section10"><b>Active membership</b></a>    <a> - </a> 
       <a href="#section11"><b>Language skills</b></a>    <a> - </a> 
       <a href="#section12"><b>Certifications</b></a>    
     </nav>
-
-
+    <div style="line-height:60%;"> <br></div>
+    <hr> 
+    <div style="line-height:60%;"> <br></div>
     
 
 
@@ -261,7 +262,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </ul>
   
       <section id="section8"></section>
-  <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in conferences</div></div>
+  <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences</div></div>
       <div class="time-line-container grid gap-4 mb-10">
              <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
              <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
