--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -37,9 +37,9 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 <BaseLayout title = "CV - David Lopez Rodriguez">
 
     <nav>
-      <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a> - </a> 
-      <a href="#section2"><b>Skills</b></a>    <a> - </a> 
-      <a href="#section3"><b>Employment History</b></a>    <a> - </a> 
+      <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a>  |  </a> 
+      <a href="#section2"><b>Skills</b></a>    <a>  |  </a> 
+      <a href="#section3"><b>Employment History</b></a>    <a>  |  </a> 
       <a href="#section4"><b>Education</b></a>    <a> - </a> 
       <a href="#section5"><b>Teaching Experience</b></a>    <a> - </a> 
       <a href="#section6"><b>Awards, Grants and Fellowships</b></a>    <a> - </a> 
