--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -35,7 +35,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
-
+<div style="text-align:center">
     <nav>
     <a>  |  </a> 
       <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a>  |  </a> 
@@ -45,16 +45,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <a href="#section5"><b>Teaching Experience</b></a>    <a>  |  </a> 
       <a href="#section6"><b>Awards, Grants and Fellowships</b></a>    <a>  |  </a> 
     </nav>
-    <nav>
+    <nav><a>  |  </a>
       <a href="#section7"><b>Continuous Education</b></a>    <a>  |  </a> 
       <a href="#section8"><b>Participation in Conferences</b></a>    <a>  |  </a> 
       <a href="#section9"><b>Peer-reviewing</b></a>    <a>>  |  </a> 
     </nav>
-    <nav>
+    <nav><a>  |  </a>
       <a href="#section10"><b>Active membership</b></a>    <a>  |  </a> 
       <a href="#section11"><b>Language skills</b></a>    <a>  |  </a> 
       <a href="#section12"><b>Certifications</b></a>    <a>  |  </a>
     </nav>
+
+</div>
     <div style="line-height:60%;"> <br></div>
     <hr> 
     <div style="line-height:160%;"> <br></div>
