--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -48,7 +48,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <nav><a>  |  </a>
       <a href="#section7"><b>Continuous Education</b></a>    <a>  |  </a> 
       <a href="#section8"><b>Participation in Conferences</b></a>    <a>  |  </a> 
-      <a href="#section9"><b>Peer-reviewing</b></a>    <a>>  |  </a> 
+      <a href="#section9"><b>Peer-reviewing</b></a>    <a>   |  </a> 
     </nav>
     <nav><a>  |  </a>
       <a href="#section10"><b>Active membership</b></a>    <a>  |  </a> 
