--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -51,8 +51,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <a href="#section9"><b>Peer-reviewing</b></a>    <a>   |  </a> 
     </nav>
     <nav><a>  |  </a>
-      <a href="#section10"><b>Active membership</b></a>    <a>  |  </a> 
-      <a href="#section11"><b>Language skills</b></a>    <a>  |  </a> 
+      <a href="#section10"><b>Active Membership</b></a>    <a>  |  </a> 
+      <a href="#section11"><b>Language Skills</b></a>    <a>  |  </a> 
       <a href="#section12"><b>Certifications</b></a>    <a>  |  </a>
     </nav>
 
@@ -295,7 +295,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
           </ul>
 
               <section id="section10"></section>
-     <div class="mb-5"> <div class="text-3xl w-full font-bold">Active membership</div></div>
+     <div class="mb-5"> <div class="text-3xl w-full font-bold">Active Membership</div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a href="https://www.swisstox.ch/" target="_blank">2023-Today: Member of the Swiss Society of Toxicology </a></li>
                     <li> <a href="https://www.endocrinology.org/" target="_blank">2023-Today: Member of the Society for Endocrinology (UK)</a></li>
@@ -307,7 +307,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
               <section id="section11"></section>
-     <div class="mb-5"><div class="text-3xl w-full font-bold">Language skills</div></div>
+     <div class="mb-5"><div class="text-3xl w-full font-bold">Language Skills</div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a target="_blank">Spanish: Native</a></li>
                     <li><a target="_blank">English: C2</a></li>
