--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -35,7 +35,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
-<div style="text-align:center">
+<div style="text-align:center"  style="background:#000000;">
     <nav>
     <a>  |  </a> 
       <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a>  |  </a> 
