--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -35,8 +35,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
-<div style="text-align:center"  style="background:#000000;">
-    <nav>
+<div style="text-align:center">
+    <nav style="background:#000000;">
     <a>  |  </a> 
       <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a>  |  </a> 
       <a href="#section2"><b>Skills</b></a>    <a>  |  </a> 
