--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -36,7 +36,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
 <div style="text-align:center">
-    <nav style="background:#000000;">
+    <nav style="background:#F2F7FF;">
     <a>  |  </a> 
       <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a>  |  </a> 
       <a href="#section2"><b>Skills</b></a>    <a>  |  </a> 
@@ -45,12 +45,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <a href="#section5"><b>Teaching Experience</b></a>    <a>  |  </a> 
       <a href="#section6"><b>Awards, Grants and Fellowships</b></a>    <a>  |  </a> 
     </nav>
-    <nav><a>  |  </a>
+    <nav style="background:#F2F7FF;"><a>  |  </a>
       <a href="#section7"><b>Continuous Education</b></a>    <a>  |  </a> 
       <a href="#section8"><b>Participation in Conferences</b></a>    <a>  |  </a> 
       <a href="#section9"><b>Peer-reviewing</b></a>    <a>   |  </a> 
     </nav>
-    <nav><a>  |  </a>
+    <nav style="background:#F2F7FF;"><a>  |  </a>
       <a href="#section10"><b>Active Membership</b></a>    <a>  |  </a> 
       <a href="#section11"><b>Language Skills</b></a>    <a>  |  </a> 
       <a href="#section12"><b>Certifications</b></a>    <a>  |  </a>
