--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,8 @@ const last_posts = posts.slice(0, 3);
           <div class="text-4xl font-bold">David Lopez Rodriguez, PhD</div>
           <div class="text-2xl py-2 font-bold">Research Fellow (Lausanne University) & Independent Consultant </div>
 
-
-          <div class="py-2"><text class="text-lg"> <p align="justify">
+          <p align="justify">
+          <div class="py-2"><text class="text-lg"> 
       
              I am multidisciplinary researcher with an expertise in biology, toxicology, 
               environmental and computational sciences.
@@ -50,7 +50,7 @@ const last_posts = posts.slice(0, 3);
               interpretation.
           
 
-              </p> </text> </div>
+               </text> </div></p>
 
            <div class="py-4">
            <text class="text-lg"><p align="justify">  <b>	Disciplines:</b> 
