--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,11 +24,12 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5">
           <div class="text-4xl font-bold">David Lopez Rodriguez, PhD</div>
-          <div class="text-2xl py-2 font-bold">Research Fellow (Lausanne University) & Independent Consultant </div>
+          <div class="text-2xl py-2 font-bold">Research Fellow - Lausanne University & Independent Consultant </div>
 
           <p align="justify">
           <div class="py-2"><text class="text-lg"> 
       
+               <div class="mb-5 text-justify">
              I am multidisciplinary researcher with an expertise in biology, toxicology, 
               environmental and computational sciences.
               
@@ -48,7 +49,7 @@ const last_posts = posts.slice(0, 3);
               data analysis, especially in omics data, to intricate statistical modeling, 
               as well as the creation of insightful data visualizations and their subsequent 
               interpretation.
-          
+           </div>
 
                </text> </div></p>
 
