--- a/src/pages/p11.astro
+++ b/src/pages/p11.astro
@@ -33,7 +33,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  <div class="py-4">
  <text class="text-lg"><p align="justify">  
  
- <b>Summary.</b>
+ <b>Summary</b>
 
 
                 <br>
