--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -151,13 +151,21 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       desc="Project Coordinator of the project 'Pesticide Exposure Assessment of the Swiss Non-Occupational Sensitive Population' (www.pestizidmonitoring.ch)"
     />
 
-     <TimeLineElement
+      <TimeLineElement
       title="EFSA - Scientific and Technical Support Panel"
       subtitle="From 2023 to 2027"
       desc="European Food & Safety Authority (EFSA). 5-year mandate as scientific and technical support"
     />
+
+      <TimeLineElement
+      title="Postdoctoral fellow - Zurich's laboratory (50%)"
+      subtitle="From 2024 - Today at University of Lausanne, Switzerland"
+      desc="Role as biostatistician/bioinformatician. Analysis of omics data and development of statistical tools for in vitro toxicological studies. "
+    />
+
+   
     <TimeLineElement
-      title="Postdoctoral fellow - Langlet's laboratory"
+      title="Postdoctoral fellow - Langlet's laboratory (50%)"
       subtitle="From 2021 at University of Lausanne, Switzerland"
       desc="Role as bioinformatician / biologist, development of novel methods to decipher the role of cell-cell communication in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
     />
