--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -162,11 +162,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
       desc="Role as biostatistician/bioinformatician. Analysis of omics data and development of statistical tools for in vitro toxicological studies. "
     />
-
    
     <TimeLineElement
       title="Postdoctoral fellow - Langlet's laboratory (50%)"
-      subtitle="From 2021 at University of Lausanne, Switzerland"
+      subtitle="From 2021 - Today at University of Lausanne, Switzerland"
       desc="Role as bioinformatician / biologist, development of novel methods to decipher the role of cell-cell communication in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
     />
     <TimeLineElement
