--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -160,7 +160,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <TimeLineElement
       title="Postdoctoral fellow - Zurich's laboratory (50%)"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
-      desc="Role as biostatistician/bioinformatician. Analysis of omics data and development of statistical tools for in vitro toxicological studies. "
+      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Analysis of omics data and development of statistical tools for in vitro toxicological studies. "
     />
    
     <TimeLineElement
