--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -160,13 +160,13 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <TimeLineElement
       title="Postdoctoral fellow - Zurich's laboratory (50%)"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
-      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Analysis of omics data and development of statistical tools for in vitro toxicological studies. "
+      desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Analysis of omics data and development of statistical tools for in vitro toxicological studies. Methods: metabolomics, transcriptomics, scRNAseq, R, Python, organoids, adverse-outcome pathways (AOPs)"
     />
    
     <TimeLineElement
       title="Postdoctoral fellow - Langlet's laboratory (50%)"
       subtitle="From 2021 - Today at University of Lausanne, Switzerland"
-      desc="Role as bioinformatician / biologist, development of novel methods to decipher the role of cell-cell communication in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
+      desc="Role as bioinformatician / biologist - Fanny Langlet's team. Development of novel methods to decipher the role of cell-cell communication involved in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
     />
     <TimeLineElement
       title="Postdoctoral fellow - H2020 FREIA Project"
