--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -157,14 +157,21 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       desc="European Food & Safety Authority (EFSA). 5-year mandate as scientific and technical support"
     />
 
+     <TimeLineElement
+      title="Postdoctoral fellow - Nathalie Chèvre's Team (50%)"
+      subtitle="From 2024 - Today at University of Lausanne, Switzerland"
+      desc="In silico tools / Chemoinformatics - Nathalie Chèvre's team. Development of an in silico machine learning tool to identify chemicals having Endocrine-Disrupting activity. Methods: R, Python, in silico models, NAMs, machine learning"
+    />
+
+
       <TimeLineElement
-      title="Postdoctoral fellow - Zurich's laboratory (50%)"
+      title="Postdoctoral fellow - Zurich's Team (50%)"
       subtitle="From 2024 - Today at University of Lausanne, Switzerland"
       desc="Role as biostatistician/bioinformatician - Marie-Gabrielle Zurich's team. Analysis of omics data and development of statistical tools for in vitro toxicological studies. Methods: metabolomics, transcriptomics, scRNAseq, R, Python, organoids, adverse-outcome pathways (AOPs)"
     />
    
     <TimeLineElement
-      title="Postdoctoral fellow - Langlet's laboratory (50%)"
+      title="Postdoctoral fellow - Langlet's Team (50%)"
       subtitle="From 2021 - Today at University of Lausanne, Switzerland"
       desc="Role as bioinformatician / biologist - Fanny Langlet's team. Development of novel methods to decipher the role of cell-cell communication involved in the neuroendocrine control of energy balance. Technologies: scRNAseq, transcriptomics, tracing, cell-cell communication, R, Python, HPC, machine learning"
     />
