--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -39,7 +39,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <nav style="background:#F2F7FF;">
     <a>  |  </a> 
       <a href="#section1" class="mb-5 text-justify"><b>Profile</b></a> <a>  |  </a> 
-      <a href="#section2"><b>Skills TESTING TESTING TEST</b></a>    <a>  |  </a> 
+      <a href="#section2"><b>Skills</b></a>    <a>  |  </a> 
       <a href="#section3"><b>Employment History</b></a>    <a>  |  </a> 
       <a href="#section4"><b>Education</b></a>    <a>  |  </a> 
       <a href="#section5"><b>Teaching Experience</b></a>    <a>  |  </a> 
